# go-sdl3

./: CONTRIBUTE.md  CONTRIBUTING.md  COVERAGE.md  Dockerfile  README.md  Taskfile.yml  extra.go  extra_notjs.go  functions.go  global.go  glue_js.go  go.mod  go.sum  graphics.go  input.go  library.go  library_js.go  library_notjs.go  methods.go  output_av.go  sdl_enums.gen.go  sdl_functions.gen.go  sdl_functions.gen_impl.go  sdl_functions_js.go  sdl_structs.gen.go  sdl_types.gen.go  system.go  utils.go
.docker/emscripten-build/: Dockerfile
.docker/ffi/: Dockerfile
.docker/wiki-annotations/: Dockerfile  main.go
.github/workflows/: build-sdl-binaries.yml  build-sdl-image.yml  build-sdl-mixer.yml  build-sdl-ttf.yml  build-sdl.yml  diff-check.yml  diff-coverage-doc.yml  emscripten-build.yml  go-build-test.yml  sdl-build.yml  sdl-image-build.yml  sdl-mixer-build.yml  sdl-shadercross-build.yml  sdl-ttf-build.yml  static-binaries-sdl.yml  static-binaries.yml
.github/workflows/cmake/: CMakeLists.txt  sdl.c
.github/workflows/sdl-build/: sdl-image.yml  sdl-mixer.yml  sdl-ttf.yml
binary/: binary_notwindows.go  binary_windows.go  load.go
binsdl/: binary_darwin.go  binary_linux.go  binary_windows.go  load.go  load_notjs.go
binsdl/assets/: sdl.dylib
cmd/: README.md  go.mod
cmd/coverage/: main.go
cmd/docgen/: main.go
cmd/ffi2go/: ffi.json  main.go  ref.h
cmd/ffi2go/config/: sdl.json  ttf.json
cmd/ffi2go/ffi/: mixer.json  ttf.json
cmd/internal/assets/: assets.go  config.go  ffi.go  wiki.go
cmd/internal/assets/config/: img.json  mixer.json  sdl.json  ttf.json
cmd/internal/assets/ffi/: img.json  mixer.json  sdl.json  ttf.json
cmd/internal/assets/wiki/: annotations.csv
cmd/jsgen/: main.go
cmd/methodgen/: main.go
cmd/wasmsdl/: README.md  main.go
cmd/wasmsdl/assets/: index.html  sdl.js  sdl.wasm
examples/gpu/: .gitignore  README.md  go.mod  go.sum  main.go
examples/gpu/assets/: assets.go
examples/gpu/assets/shaders/: compile.sh
examples/gpu/common/: image.go  shader.go
examples/gpu/examples/: basiccompute.go  basicstencil.go  basictriangle.go  basicvertexbuffer.go  blit2darray.go  blitcube.go  blitmirror.go  clear3dslice.go  clearscreen.go  clearscreenmultiwindow.go  compressedtextures.go  computesampler.go  computespritebatch.go  computeuniforms.go  copyandreadback.go  copyconsistency.go  cubemap.go  cullmode.go  customsampling.go  depthsampler.go  drawindirect.go  generatemipmaps.go  instancedindexed.go  latency.go  main.go  pullspritebatch.go  texture2darray.go  texturedanimatedquad.go  texturedquad.go  texturetypetest.go  tonemapping.go  trianglemsaa.go  windowresize.go
examples/gpu/examples/common/: context.go  image.go  math.go  shader.go  struct.go
examples/helloworld/: main.go
examples/input/: README.md
examples/input/01-joystick-polling/: main.go
examples/input/02-joystick-events/: main.go
examples/renderer/: README.md
examples/renderer/01-clear/: main.go
examples/renderer/02-primitives/: main.go
examples/renderer/03-lines/: main.go
examples/renderer/04-points/: main.go
examples/renderer/05-rectangles/: main.go
examples/renderer/06-textures/: main.go
examples/renderer/07-streaming-textures/: main.go
examples/renderer/08-rotating-textures/: main.go
examples/renderer/09-scaling-textures/: main.go
examples/renderer/10-geometry/: main.go
examples/renderer/11-color-mods/: main.go
examples/renderer/14-viewport/: main.go
examples/renderer/15-cliprect/: main.go
examples/renderer/17-read-pixels/: main.go
examples/renderer/18-debug-text/: main.go
examples/renderer/_assets/: images.go
img/: functions.go  glue.go  glue_js.go  glue_notjs.go  image.go  img_functions.gen.go  img_functions.gen_impl.go  img_functions_js.go  img_structs.gen.go  img_types.gen.go  init_js.go
internal/: memory_js.go  slice.go  string_js.go  string_notjs.go  tmp_directory.go  utils.go
mixer/: extra.go  functions.go  glue.go  glue_js.go  glue_notjs.go  helpers.go  init_js.go  init_notjs.go  macros.go  methods.go  mixer_enums.gen.go  mixer_functions.gen.go  mixer_functions.gen_impl.go  mixer_functions_js.go  mixer_structs.gen.go  mixer_types.gen.go
sdl/: functions.go  glue.go  glue_js.go  glue_notjs.go  helpers.go  init_js.go  init_notjs.go  macros.go  methods.go  sdl_enums.gen.go  sdl_functions.gen.go  sdl_functions.gen_impl.go  sdl_functions_ex.go  sdl_functions_ex_impl.go  sdl_functions_js.go  sdl_structs.gen.go  sdl_types.gen.go  sdl_types_ex.go
sdl/sdlgpu/: buffers.go
shadercross/: README.md  functions.go  init.go  types.go
ttf/: extra.go  functions.go  glue.go  init_js.go  methods.go  ttf_enums.gen.go  ttf_functions.gen.go  ttf_functions.gen_impl.go  ttf_functions_ex.go  ttf_functions_ex_impl.go  ttf_functions_js.go  ttf_structs.gen.go  ttf_types.gen.go
